# oil-backend

./: .gitignore  Cargo.toml  result_long_term_forecast.txt
lib/libs/: calmse.py  data.py  new.py  pyvenv.cfg  result_long_term_forecast.txt  run.py
results/long_term_forecast_GRU10_GRU_yali_ftMS_sl10_ll5_pl10_dm512_nh8_el2_dl1_df2048_fc3_ebtimeF_dtTrue_Exp_0/: metrics.npy  pred.npy
results/long_term_forecast_GRU15_GRU_yali_ftMS_sl15_ll5_pl15_dm512_nh8_el2_dl1_df2048_fc3_ebtimeF_dtTrue_Exp_0/: metrics.npy  pred.npy  true.npy
results/long_term_forecast_GRU20_GRU_yali_ftMS_sl20_ll5_pl20_dm512_nh8_el2_dl1_df2048_fc3_ebtimeF_dtTrue_Exp_0/: metrics.npy  pred.npy  true.npy
results/long_term_forecast_GRU30_GRU_yali_ftMS_sl30_ll5_pl30_dm512_nh8_el2_dl1_df2048_fc3_ebtimeF_dtTrue_Exp_0/: metrics.npy  pred.npy  true.npy
results/long_term_forecast_LSTM10_LSTM_yali_ftMS_sl10_ll5_pl10_dm512_nh8_el2_dl1_df2048_fc3_ebtimeF_dtTrue_Exp_0/: metrics.npy  pred.npy
results/long_term_forecast_LSTM15_LSTM_yali_ftMS_sl15_ll5_pl15_dm512_nh8_el2_dl1_df2048_fc3_ebtimeF_dtTrue_Exp_0/: metrics.npy  pred.npy
results/long_term_forecast_LSTM20_LSTM_yali_ftMS_sl20_ll5_pl20_dm512_nh8_el2_dl1_df2048_fc3_ebtimeF_dtTrue_Exp_0/: metrics.npy  pred.npy
results/long_term_forecast_LSTM30_LSTM_yali_ftMS_sl30_ll5_pl30_dm512_nh8_el2_dl1_df2048_fc3_ebtimeF_dtTrue_Exp_0/: metrics.npy  pred.npy
results/long_term_forecast_RNN10_RNN_yali_ftMS_sl10_ll5_pl10_dm512_nh8_el2_dl1_df2048_fc3_ebtimeF_dtTrue_Exp_0/: metrics.npy  pred.npy
src/: data_display.rs  data_handle.rs  main.rs  model.rs
(+36 files in other folders)
